Fix crash due to trying to modify an immutable list