@@ -8,6 +8,7 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import moze_intel.projecte.api.ItemInfo;
 import moze_intel.projecte.api.capabilities.IKnowledgeProvider;
 import moze_intel.projecte.api.capabilities.IKnowledgeProvider.TargetUpdateType;
@@ -142,7 +143,7 @@ public class TransmutationInventory extends CombinedInvWrapper {
 		knowledge = provider.getKnowledge().stream()
 				.filter(EMCHelper::doesItemHaveEmc)
 				.sorted(Collections.reverseOrder(Comparator.comparing(EMCHelper::getEmcValue)))
-				.toList();
+				.collect(Collectors.toList());//Note: cannot use .toList() as that is immutable, and we remove lower down
 		for (int i = 0; i < outputs.getSlots(); i++) {
 			outputs.setStackInSlot(i, ItemStack.EMPTY);
 		}
